# pathtracer-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
ext/stb_image/: stb_image.h
res/shaders/: Basic.shader  pt_compute.shader  pt_vertfrag.shader  sphere_compute.shader
test/: testClearColor.h
tests/: test.cpp  test.h  testClearColor.cpp  testClearColor.h  test_clear_color.cpp  test_clear_color.h  test_pathtracer.cpp  test_pathtracer.h  test_sphere.cpp  test_sphere.h  test_texture_2d.cpp  test_texture_2d.h
